2008-02-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/hideshow.el: Remove the minor-mode bookkeeping. Move
	make-variable-buffer-local code after the corresponding defvar.
	(hs-minor-mode-map): Define and initialize in one step.
	(hs-minor-mode): Change from defun to define-minor-mode.

2008-02-16  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-gdb): Don't reset gdb-ready.
	(gdb-ready): Move declaration...

	* progmodes/gdb-ui.el (gdb-ready): ...to here.
	(gdb-early-user-input): New variable.
	(gdb): Reset gdb-flush-pending-output to nil and set
	comint-input-sender here (before gdb-prompt), instead of...
	(gdb-init-1): ...here.
	(gdb-send): If Emacs is not ready, defer user input to...
	(gdb-prompt): ...here.

2008-02-16  Glenn Morris  <rgm@gnu.org>

	* composite.el (composition-function-table): Doc fix.

	* calendar/time-date.el (format-seconds): Remove `nonzero' argument
	in favor of `%z' specifier.
	(emacs-uptime): Move to time.el.
	* time.el (emacs-uptime): Move here from time-date.el.  Add
	optional `format' argument.  Doc fix.  Use `%z' rather than
	removed `nonzero' argument of format-seconds.

2008-02-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* bindings.el (mode-line-mule-info): Make the tooltips more explicit.

2008-02-15  Jason Rumney  <jasonr@gnu.org>

	* term/mac-win.el: Fix coding tag.

2008-02-15  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hooks.el (vc-menu-map):
	* bindings.el (mode-line-mode-menu): Add tooltips.

	* bindings.el (help-echo): Add more tooltips.  Use a less
	telegraphic style for existing tooltips.

2008-02-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* frame.el (frame-notice-user-settings): Distinguish explicit parent-id
	from the auto-generated one.

2008-02-14  Glenn Morris  <rgm@gnu.org>

	* mail/rmail-spam-filter.el (rmail-spam-filter): Let-bind
	message-spam-status.

	* mail/smtpmail.el (password-cache-add): Declare as function.

2008-02-14  Justus Piater <Justus-bulk@Piater.name>  (tiny change)
